@@ -5,14 +5,14 @@ Bundle-SymbolicName: org.netxms.ui.eclipse.objectmanager;singleton:=true
 Bundle-Version: 1.2.15
 Bundle-Activator: org.netxms.ui.eclipse.objectmanager.Activator
 Bundle-Vendor: netxms.org
-Require-Bundle: org.netxms.ui.eclipse.objectbrowser;bundle-version="1.2.13",
- org.netxms.ui.eclipse.usermanager;bundle-version="1.2.11",
+Require-Bundle: org.netxms.ui.eclipse.objectbrowser;bundle-version="1.2.15",
+ org.netxms.ui.eclipse.usermanager;bundle-version="1.2.14",
  org.netxms.ui.eclipse.nxsl;bundle-version="1.2.11",
- org.netxms.ui.eclipse.imagelibrary;bundle-version="1.2.13",
+ org.netxms.ui.eclipse.imagelibrary;bundle-version="1.2.14",
  org.netxms.ui.eclipse.datacollection;bundle-version="1.2.13",
  org.netxms.ui.eclipse.eventmanager;bundle-version="1.2.10",
  org.eclipse.rap.ui;bundle-version="2.2.0",
- org.netxms.webui.core;bundle-version="1.2.13"
+ org.netxms.webui.core;bundle-version="1.2.15"
 Bundle-RequiredExecutionEnvironment: JavaSE-1.6
 Bundle-ActivationPolicy: lazy
 Export-Package: org.netxms.ui.eclipse.objectmanager.actions,
