@@ -102,6 +102,9 @@
                 <instanceof
                       value="org.netxms.client.objects.ServiceRoot">
                 </instanceof>
+                <instanceof
+                      value="org.netxms.client.objects.Condition">
+                </instanceof>
              </or>
           </enabledWhen>
         </page>
