@@ -9,6 +9,7 @@
    - "Commands" box on node overview page made configurable
    - Object tools can have icons
    - "Last value" type gauge can show non-numeric values
+   - "Trusted Nodes" property page shown for condition objects
 - Android Console:
    - Added option in preference to show/hide legend in graphs
 - Fixed issues: #597, #598
